--- a/app.html
+++ b/app.html
@@ -13,7 +13,7 @@
    <div class="row">
    	 <div class="quiz-box">
    	 	<h4 class="msg"></h4>
-   	 	<h1 class="quiz">BA</h1>
+   	 	<h1 class="quiz"></h1>
    	 	</div>
       </div>
       <div class="row">
